tests/invalid/invalid_any_type_annotation.csl
config InvalidAnyAnn {
  meta: any{} @min_length(1);
}
